--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -74,6 +74,13 @@
     }
 }
 
+@media screen and (max-width: 1600px) {
+    :root{
+      font-size: calc(10 / (1600 / 100) * 1vw) ;
+    }
+}
+
+
 @media screen and (max-width: 1280px) {
     :root{
       font-size: calc(10 / (1280 / 100) * 1vw) ;
